# Desafios-de-Treino

./: README.md  minesweeper.py  puzzle.py  pyproject.toml
R/: crypto_square.R  prisioneiros.R
data/: ex29.R.save
exercicios/: Length_Encoding.py  MaxEarning.py  SquareRoot.py  a.R  ex27.py  power_five.py  rotational_cipher.R  roubo.py
src/desafios_de_treino/: CountCoin.py  Hangman.py  KangarooRace.py  Knapsack.py  MaxEarning.md  Parsing_sgf.py  SpiralMatrix.py  SquareRoot.py  complex_number.py  conway.py  count.py  ex27.R  ex28.py  go.py  heist.py  hiro_minesweeper.py  jogo_da_velha.py  largest_series_product.py  maximize_segments.py  minimum_cost.py  paasio.py  pascal_triangle.py  power_five.py  prime_circular.py  rail_fence_cipher.py  rational_numbers.py  rodrigo.ipynb  rpn.py  satellite.py  signals_tower.py  tree.py  variable_length_quantity.py  zebra.py  zip.py
tests/: test_KangorooRace.py  test_Knapsack.py  test_Parsing_sgf  test_complex_num.py  test_conway.py  test_example.py  test_go.py  test_largest_series_product.py  test_maximize_segments.py  test_minimum_cost.py  test_paasio.py  test_pascal_triangle.py  test_rail_fence_cipher.py  test_rational.py  test_rpn.py  test_satellite.py  test_signals_tower.py  test_tree.py  test_variable_length_quantity.py  test_zebra.py  test_zip.py
typings/constraint/: __init__.pyi
