[project]
name = "desafios_de_treino"
version = "0.1.0"
description = ""
authors = [
    {name = "Rwata56",email = "rodwatague@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-profiling = "^1.8.1"
pytest-cov = "^6.1.1"
mypy = "^1.16.0"
radon = "5.1"

